--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
 <head>
-    <p>placeholder pagina</p>
+    <h3>Dear Diary,</h3>
+    <h3>Today my friend Jeremy ❗️</h3>
+    <h3>visited my house. He is</h3>
+    <h3>very cool😎 Yeah Yeah.</h3>
+    <h3>I learned that Jeremy has</h3>
+    <h3>a very cool catchphrase</h3>
+    <h3>"kakazuuuukiii"</h3>
+    <h2>He is the</h2>
+    <h1>BEST❗️</h1>
+    <br>
+    <p>xxx</p>
+    <p> Damia nna</p>
 </head>
