--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <p>xxx</p>
     <p> Damia nna</p>
     <br><br><br>
-    <img src="https://images.app.goo.gl/Jb5aM7hpwzxpXdd97">
+    <img src="https://twinfinite.net/guides/what-does-dattebayo-mean-in-naruto/">
 </head>
