--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <p>xxx</p>
     <p> Damia nna</p>
     <br><br><br>
-    <img src="https://twinfinite.net/guides/what-does-dattebayo-mean-in-naruto/">
+    <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
 </head>
