--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <center>
     <h3>Dear Diary,</h3>
     <h3>Today my friend Jeremy ❗️</h3>
     <h3>visited my house. He is</h3>
@@ -14,4 +15,5 @@
     <p> Damia nna</p>
     <br><br><br>
     <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
+    </center>
 </head>
