- Icon toegevoegd - style.css toegevoegd - Kleine changes gemaakt

--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<head>
-    <h3>Dear Diary,</h3>
-    <h3>Today my friend Jeremy ❗️</h3>
-    <h3>visited my house. He is</h3>
-    <h3>very cool 😎  Yeah Yeah.</h3>
-    <h3>I learned that Jeremy has</h3>
-    <h3>a very cool catchphrase</h3>
-    <h3>"kakazuuuukiii"</h3>
-    <h2>He is the</h2>
-    <h1>BEST❗️</h1>
-    <br>
-    <p>xxx</p>
-    <p> Damia nna</p>
-    <br><br><br>
-    <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
-</head>
+<html lang="en">
+    <head>
+        <link href="style.css" rel="stylesheet">
+        <meta charset="UTF-8">
+        <title>HomePage - JeKiDa</title>
+        <link rel="icon" href="/Plaatjes/MC.png"/>
+    </head>
+
+    <body>
+        <header>
+            <h1>Welcome to our official website</h1>
+        </header>
+
+        <main background-color: blue;>
+            <h3>Dear Diary,</h3>
+            <h3>Today my friend Jeremy ❗️</h3>
+            <h3>visited my house. He is</h3>
+            <h3>very cool 😎  Yeah Yeah.</h3>
+            <h3>I learned that Jeremy has</h3>
+            <h3>a very cool catchphrase</h3>
+            <h3>"kakazuuuukiii"</h3>
+            <h2>He is the</h2>
+            <h1>BEST❗️</h1>
+            <br>
+            <p>xxx</p>
+            <p> Damianna</p>
+            <br><br><br>
+            <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
+        </main>
+
+        <footer>
+            <p>© 2025 JeKiDa. All rights reserved.</p>
+            <p>Contact us at: amongus@sussybaka.com</p>
+    </body>
+</html>
