--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>HomePage - JeKiDa</title>
         <link rel="icon" href="/Plaatjes/MC.png"/>
+        <script src="functions.js"></script>
     </head>
 
     <body>
@@ -13,6 +14,7 @@
         </header>
 
         <main>
+            <div id="timeline">Laden...</div>
             <script>
                 const owner = "AdvanturePie";
                 const repo = "jekida-site";
@@ -45,7 +47,7 @@
             <h1>BEST❗️</h1>
             <br>
             <p>xxx</p>
-            <p> Damia nna</p>
+            <p> Damianna</p>
             <br><br><br>
             <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
         </main>
