--- a/index.html
+++ b/index.html
@@ -10,46 +10,35 @@
 
     <body>
         <header>
-            <h1>Welcome to our official website</h1>
+            <h1>Welcome to the official JeKiDa website</h1>
         </header>
 
         <main>
-            <div id="timeline">Laden...</div>
-            <script>
-                const owner = "AdvanturePie";
-                const repo = "jekida-site";
-                
-                fetch(`https://api.github.com/repos/${owner}/${repo}/commits`)
-                .then(response => response.json())
-                .then(commits => {
-                    const timeline = document.getElementById("timeline");
-                    commits.forEach(commit => {
-                        const div = document.createElement("div");
-                        div.className = "commit";
-                        div.innerHTML = `
-                        <strong>${commit.commit.message}</strong><br>
-                        <time>${new Date(commit.commit.author.date).toLocaleString()}</time><br>
-                        by <em>${commit.commit.author.name}</em>
-                        `;
-                        timeline.appendChild(div);
-                    });
-                });
-            </script>
+            <div id="navigation">
+                <a class= 'navbtns' href="index.html">Home</a>
+                <a class= 'navbtns' href="index.html">amongus</a>
+                <a class= 'navbtns' href="index.html">jeremy's huis</a>
+            </div>
 
-            <h3>Dear Diary,</h3>
-            <h3>Today my friend Jeremy ❗️</h3>
-            <h3>visited my house. He is</h3>
-            <h3>very cool 😎  Yeah Yeah.</h3>
-            <h3>I learned that Jeremy has</h3>
-            <h3>a very cool catchphrase</h3>
-            <h3>"kakazuuuukiii"</h3>
-            <h2>He is the</h2>
-            <h1>BEST❗️</h1>
-            <br>
-            <p>xxx</p>
-            <p> Damianna</p>
-            <br><br><br>
-            <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
+            <div id="jeremyshi">
+                <h3>Dear Diary,</h3>
+                <h3>Today my friend Jeremy ❗️</h3>
+                <h3>visited my house. He is</h3>
+                <h3>very cool 😎  Yeah Yeah.</h3>
+                <h3>I learned that Jeremy has</h3>
+                <h3>a very cool catchphrase</h3>
+                <h3>"kakazuuuukiii"</h3>
+                <h2>He is the</h2>
+                <h1>BEST❗️</h1>
+                <br>
+                <p>xxx</p>
+                <p> Damian na</p>
+                <br><br><br>
+                <img src="https://www.kanpai-japan.com/sites/default/files/styles/big_header_xxs/public/uploads/2020/03/naruto-dattebayo.jpg">
+            </div>
+
+            <h2>GitHub timeline</h2>
+            <div id="timeline">Loading...</div>
         </main>
 
         <footer>
