een fix denk ik?

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             </div>
 
             <h2>GitHub timeline</h2>
+            <div class="timeline-wrapper">
             <div id="timeline">Loading...</div>
+            </div>
         </main>
 
         <footer>
