Update - navigation btns een link gegeven - woorden in engels veranderd - timeline(box) aangepast

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <main>
             <div id="navigation">
                 <a class= 'navbtns' href="index.html">Home</a>
-                <a class= 'navbtns' href="index.html">amongus</a>
-                <a class= 'navbtns' href="index.html">jeremy's huis</a>
+                <a class= 'navbtns' href="https://pixabay.com/illustrations/meme-among-us-amogus-game-6195988/" target="_blank">amongus</a>
+                <a class= 'navbtns' href="https://www.google.com/maps/place/Apenheul/@52.2153836,5.9184079,17z/data=!3m1!4b1!4m6!3m5!1s0x47c7c7f7850f4e03:0x60a9082c7f7ee450!8m2!3d52.2153836!4d5.9184079!16zL20vMDR6amdy?entry=ttu&g_ep=EgoyMDI1MDYxNy4wIKXMDSoASAFQAw%3D%3D" target="_blank">jeremy's huis</a>
             </div>
 
             <div id="jeremyshi">
@@ -38,7 +38,6 @@
             </div>
 
             <h2>GitHub timeline</h2>
-            <div class="timeline-wrapper">
             <div id="timeline">Loading...</div>
             </div>
         </main>
