--- a/prototype/about.html
+++ b/prototype/about.html
@@ -16,7 +16,7 @@
         <main>
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="proto.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="download.html">Download</a></li>
                     <li><a href="FAQ.html">FAQ</a></li>
